# launchpadai

./: .gitignore  CLAUDE.md  README.md  SECURITY_AUDIT.md  pyproject.toml
.github/workflows/: ci.yml
launchpadai/: __init__.py  config.py
launchpadai/cli/: main.py  prompts.py
launchpadai/frameworks/: __init__.py  _entrypoint.py  agentscript.py  base.py  crewai.py  langgraph.py  plain.py  registry.py
launchpadai/generators/: agents_layer.py  api_layer.py  architecture_viz.py  auth_layer.py  cli_runner.py  config_files.py  data_layer.py  docker_layer.py  eval_layer.py  guardrails_layer.py  knowledge_layer.py  memory_layer.py  ml_pipeline.py  models_layer.py  notebooks_layer.py  observability_layer.py  project.py  prompts_layer.py  requirements.py  scripts_layer.py  tests_layer.py  tools_layer.py  ui_layer.py
tests/: conftest.py
tests/integration/: test_cross_generator.py  test_edge_cases.py  test_full_generation.py
tests/smoke/: test_generation_smoke.py
tests/unit/: test_agents_layer.py  test_api_layer.py  test_auth_layer.py  test_cli.py  test_cli_runner.py  test_config_files.py  test_config_model.py  test_data_layer.py  test_docker_layer.py  test_eval_layer.py  test_guardrails_layer.py  test_knowledge_layer.py  test_memory_layer.py  test_ml_pipeline.py  test_models_layer.py  test_observability_layer.py  test_prompts_layer.py  test_requirements.py  test_scripts_layer.py  test_tests_layer.py  test_tools_layer.py  test_ui_layer.py
tests/validation/: test_notebook_validity.py  test_python_syntax.py  test_requirements_accuracy.py  test_yaml_json_validity.py
